--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="grey">#8E8E8E</color>
     <color name="lightGrey">#DEDEDE</color>
     <color name="pink">#DBB7F1</color>
+    <color name="darkBlue">#37449E</color>
 </resources>
