feat: add ActionButtonRow component and update CardSection with string resources

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="lightGrey">#DEDEDE</color>
     <color name="pink">#DBB7F1</color>
     <color name="darkBlue">#37449E</color>
+    <color name="lightBlue">#EAEEFC</color>
 </resources>
